# yaml_cpp_parser

./: CMakeLists.txt  config.yml
lib/yaml_config/: CMakeLists.txt
lib/yaml_config/include/: demo_config.h  demo_config_manager.h
lib/yaml_config/src/: demo_config.cpp  demo_config_manager.cpp
src/: CMakeLists.txt  main.cpp
